--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.olipar</groupId>
-	<artifactId>SSMCT</artifactId>
+	<artifactId>SSMCT-web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
@@ -17,9 +17,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
@@ -45,11 +47,6 @@
 			<version>3.1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.metsci.glimpse</groupId>
-			<artifactId>glimpse-util</artifactId>
-			<version>3.1.0</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
@@ -57,18 +54,8 @@
 	</dependencies>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>1.10</java.version>
 	</properties>
-
-	<repositories>
-
-		<repository>
-			<id>projectlombok.org</id>
-			<url>http://projectlombok.org/mavenrepo</url>
-		</repository>
-
-	</repositories>
-
 
 	<build>
 		<plugins>
